--- a/index1.html
+++ b/index1.html
@@ -26,8 +26,8 @@
       <img src="img/logo.png" alt="SMP NEGERI 2 LEMAHABANG" width="100" />
       <h3 class="display-5">SMP NEGERI 2 LEMAHABANG</h3>
       <p class="lead">The Excellent School | Adiwiyata School</p>
-      <h3>PENILAIAN AKHIR SEMESTER GASAL</h3>
-      <h4>TAHUN PELAJARAN 2022/2023</h4>
+      <h3>UJIAN SEKOLAH</h3>
+      <h4>TAHUN PELAJARAN 2023/2024</h4>
    </section>
     <!-- akhir jumbotron -->
 
@@ -36,7 +36,7 @@
       <div class="countainer">
         <div class="row text-center">
           <div class="col">
-            <h3 class="text-dark">-KELAS VII (Tujuh)-</h3>
+            <h3 class="text-dark">KELAS IX (Sembilan)</h3>
           </div>
         </div>
       </div>
@@ -45,6 +45,8 @@
           <table class="table table-sm table-bordered table-striped table-hover">
             <thead>
               <tr style="background-color: rgb(46, 1, 88); color: aliceblue;">
+                <th scope="col">SENIN</th>
+                <th scope="col">SELASA</th>
                 <th scope="col">RABU</th>
                 <th scope="col">KAMIS</th>
                 <th scope="col">JUM'AT</th>
@@ -58,14 +60,12 @@
               <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/NtctGZFFPwR3rHZV6" class="text-decoration-none text-black">PKN</a></td>
               <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/79VhAaEximpDrmo76" class="text-decoration-none text-black">BAHASA INGGRIS</a></td>
               <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/Sdp2PFzq55dq4tJz7" class="text-decoration-none text-black">IPA</a></td>
+              <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/n1BRqoB8jfZu7wNR6" class="text-decoration-none text-black">BAHASA INDONESIA</a></td>
+              <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/Jf1fLMMwgxHbF1jT8" class="text-decoration-none text-black">MATEMATIKA</a></td>
               </tr>
               <tr>
-                <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/n1BRqoB8jfZu7wNR6" class="text-decoration-none text-black">BAHASA INDONESIA</a></td>
-                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/Jf1fLMMwgxHbF1jT8" class="text-decoration-none text-black">MATEMATIKA</a></td>
-                <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/TTVvxbSrdxhGjYs69" class="text-decoration-none text-black">PJOK</a></td>
-                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/aByD9kkn4z9cGZaT9" class="text-decoration-none text-black">TIK</a></td>
-              </tr>
-              <tr>
+                <td style="background-color:rgb(248, 255, 184);"><a target="_blank" href="https://forms.gle/TTVvxbSrdxhGjYs69" class="text-decoration-none text-black">PJOK</a></td>
+                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/aByD9kkn4z9cGZaT9" class="text-decoration-none text-black">PRAKARYA</a></td>
                 <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/SGQpNS7TSneCqXjR9" class="text-decoration-none text-black">BAHASA CIREBON</a></td>
                 <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/HCLeM7R9yxVkH5Aa8" class="text-decoration-none text-black">SENI BUDAYA</a></td>
                 <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="#" class="text-decoration-none text-black">-</a></td>
