--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="countainer">
         <div class="row text-center">
           <div class="col">
-            <h3>PENILAIAN AKHIR SEMESTER GASAL</h3>
-            <h4>TAHUN PELAJARAN 2022/2023</h4>
+            <h3>UJIAN SEKOLAH</h3>
+            <h4>TAHUN PELAJARAN 2023/2024</h4>
           </div>
         </div>
       </div>
@@ -50,9 +50,7 @@
             </thead>
             <tbody>
               <tr>
-                <td style="background-color:rgb(255, 239, 184);"><a href="index1.html" class="text-decoration-none text-black">KELAS VII</a></td>
-                <td style="background-color:rgb(224, 188, 69);"><a href="index2.html" class="text-decoration-none text-black">KELAS VIII</a></td>
-                <td style="background-color:rgb(255, 239, 184);"><a href="index3.html" class="text-decoration-none text-black">KELAS IX</a></td>
+                <td style="background-color:rgb(255, 239, 184);"><a href="index1.html" class="text-decoration-none text-black">KELAS IX</a></td>
               </tr>
             </tbody>
           </table>
