--- a/index1.html
+++ b/index1.html
@@ -45,31 +45,31 @@
           <table class="table table-sm table-bordered table-striped table-hover">
             <thead>
               <tr style="background-color: rgb(46, 1, 88); color: aliceblue;">
-                <th scope="col">SENIN</th>
-                <th scope="col">SELASA</th>
-                <th scope="col">RABU</th>
-                <th scope="col">KAMIS</th>
-                <th scope="col">JUM'AT</th>
-                <th scope="col">SABTU</th>
+                <th scope="col">SENIN 6 MEI 2024</th>
+                <th scope="col">SELASA 7 MEI 2024</th>
+                <th scope="col">RABU 8 MEI 2024</th>
+                <th scope="col">JUM'AT 10 MEI 2024</th>
+                <th scope="col">SABTU 11 MEI 2024</th>
+                <th scope="col">SENIN 13 MEI 2024</th>
               </tr>
               </tr>
             </thead>
             <tbody>
               <tr>
-              <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/Ya6GHbUDaAZqP4ea7" class="text-decoration-none text-black">PAI</a></td>
-              <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/NtctGZFFPwR3rHZV6" class="text-decoration-none text-black">PKN</a></td>
-              <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/79VhAaEximpDrmo76" class="text-decoration-none text-black">BAHASA INGGRIS</a></td>
-              <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/Sdp2PFzq55dq4tJz7" class="text-decoration-none text-black">IPA</a></td>
-              <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/n1BRqoB8jfZu7wNR6" class="text-decoration-none text-black">BAHASA INDONESIA</a></td>
-              <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/Jf1fLMMwgxHbF1jT8" class="text-decoration-none text-black">MATEMATIKA</a></td>
+              <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/JVL1ZjHJbegiymXT8" class="text-decoration-none text-black">PAI</a></td>
+              <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/JRRpTS7ctd1cC7JB6" class="text-decoration-none text-black">MATEMATIKA</a></td>
+              <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/TfocPPEmkTemrirT8" class="text-decoration-none text-black">BAHASA INGGRIS</a></td>
+              <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/8K9QUKAnNR3DTeH97" class="text-decoration-none text-black">PJOK</a></td>
+              <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/vVTAnHhNbEa1DeeP8" class="text-decoration-none text-black">IPA</a></td>
+              <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/mWhcxFCbRCsWJPzu9" class="text-decoration-none text-black">IPS</a></td>
               </tr>
               <tr>
-                <td style="background-color:rgb(248, 255, 184);"><a target="_blank" href="https://forms.gle/TTVvxbSrdxhGjYs69" class="text-decoration-none text-black">PJOK</a></td>
-                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/aByD9kkn4z9cGZaT9" class="text-decoration-none text-black">PRAKARYA</a></td>
-                <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/SGQpNS7TSneCqXjR9" class="text-decoration-none text-black">BAHASA CIREBON</a></td>
-                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/HCLeM7R9yxVkH5Aa8" class="text-decoration-none text-black">SENI BUDAYA</a></td>
-                <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="#" class="text-decoration-none text-black">-</a></td>
-                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/TmpxHj12aMC9j6qV7" class="text-decoration-none text-black">IPS</a></td>
+                <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/wTFHKSVqxQuyv2T77" class="text-decoration-none text-black">BAHASA INDONESIA</a></td>
+                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/Nm6v2N2DEt7oBrwp7" class="text-decoration-none text-black">PKN</a></td>
+                <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/Djbzq7WFbVXWbyiF8" class="text-decoration-none text-black">BAHASA CIREBON</a></td>
+                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="#" class="text-decoration-none text-black">-</a></td>
+                <td style="background-color:rgb(255, 239, 184);"><a target="_blank" href="https://forms.gle/A37xgoZyxaD4Pstk6" class="text-decoration-none text-black">PRAKARYA</a></td>
+                <td style="background-color:rgb(224, 188, 69);"><a target="_blank" href="https://forms.gle/dqG8H8wdhojXQ7Xt7" class="text-decoration-none text-black">SENI BUDAYA</a></td>
               </tr>
              
             </tbody>
